Restore C5.2dc coursework member APIs
